updated links in youtube section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@ div{text-align: center;}
 <br>
 <a class="btn" href="https://www.facebook.com/its.bhagyeshgamer" target="_blank" ><i class="fab fa-github fa-1x"></i> Facebook</a>		
 <br>
-
+<h3>Youtube:</h3>
+<br>
+<a class="btn" href="https://www.youtube.com/channel/UC5NifuVD4xAxHRHtN5yhFsA" target="_blank" ><i class="fab fa-github fa-1x"></i> Vlog Channel</a>		
+<br>
+<br>
+<a class="btn" href="https://www.youtube.com/channel/UCrTNvFXkrrffJcVDNthpRyw" target="_blank" ><i class="fab fa-github fa-1x"></i> Gaming Channel</a>		
+<br>
 </div>
 </body>
 </html>
