fix instagram link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ div{text-align: center;}
 <H2>Social Media Profiles:</H2>
 <a class="btn" href="https://www.linkedin.com/in/bhagyeshrane" target="_blank" ><i class="fab fa-linkedin fa-1x"></i> Linkedin</a>
 <br>
-<a class="btn" href="https://www.instagram.com/bhagyesh.rane" target="_blank" ><i class="fab fa-instagram fa-1x"></i> Instagram</a>	
+<a class="btn" href="https://www.instagram.com/bhagyesh_rane/" target="_blank" ><i class="fab fa-instagram fa-1x"></i> Instagram</a>	
 <br>
 <br>
 <a class="btn" href="https://www.instagram.com/naturesclick._/" target="_blank" ><i class="fab fa-instagram fa-1x"></i> Instagram Photography</a>	
