--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ div{text-align: center;}
 <br>
 <a class="btn" href="https://www.youtube.com/channel/UCrTNvFXkrrffJcVDNthpRyw" target="_blank" ><i class="fab fa-github fa-1x"></i> Gaming Channel</a>		
 <br>
+<a href="/Resume.pdf">Link</a>
 </div>
 </body>
 </html>
