--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ div{text-align: center;}
 <br>
 <a class="btn"  href="tel:+919137457061"><i class="fas fa-phone"></i> +91-9137457061</a>
 <br>
+<a class="btn" href="/Resume.pdf" target="_blank" ><i class="fab fa-github fa-1x"></i> Résumé</a>		
+<br>
 <H2>Social Media Profiles:</H2>
 <a class="btn" href="https://www.linkedin.com/in/bhagyeshrane" target="_blank" ><i class="fab fa-linkedin fa-1x"></i> Linkedin</a>
 <br>
@@ -91,7 +93,6 @@ div{text-align: center;}
 <br>
 <a class="btn" href="https://www.youtube.com/channel/UCrTNvFXkrrffJcVDNthpRyw" target="_blank" ><i class="fab fa-github fa-1x"></i> Gaming Channel</a>		
 <br>
-<a href="/Resume.pdf">Link</a>
 </div>
 </body>
 </html>
